--- a/Project-00/TryApp-0/src/app/app.component.html
+++ b/Project-00/TryApp-0/src/app/app.component.html
@@ -2,18 +2,23 @@
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
-        <div>Olá, {{nome}}</div>
+        <div >Olá, {{nome}}</div>
 
+       <div style="text-align: center;">
+              <a href="https://justa.com.vc" class="logo-link" >
+                <img src="https://justa.com.vc/wp-content/themes/justa/img/svg/logo-v2.svg" alt="Logo da Justa" role="img" width="130" height="41">
+              </a>
+            </div>
+            
         <ion-list id="page-list">
           <ion-list-header>
 
 
-<a href="https://justa.com.vc" class="logo-link">
-  <img src="https://justa.com.vc/wp-content/themes/justa/img/svg/logo-v2.svg" alt="Logo da Justa" role="img" width="130" height="41">
-</a>
+            
+
 
           </ion-list-header>
-          <a href="https://github.com/GalaticosUPE" target="_blank">Time</a>
+          
 
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
@@ -23,9 +28,31 @@
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
-
+        <!-- fim do conteudo-->
+       
+        
       </ion-content>
+   
+      <div style="background-color: #73849a; display: flex; justify-content: center; align-items: center; margin-bottom: auto; padding-bottom: 16px;">
+        <a href="https://github.com/GalaticosUPE" target="_blank">
+          <button type="button" class="btn btn-primary btn-icon" style="border-radius: 8px; border: none; margin-right: 16px;">
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16" style="margin-right: 8px;">
+              <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+            </svg>
+            <span style="color: #fff; font-size: 16px;">Time</span>
+          </button>
+        </a>
+      </div>
+
+      
+      
+      
     </ion-menu>
+
     <ion-router-outlet id="main-content"></ion-router-outlet>
+
   </ion-split-pane>
+
 </ion-app>
+
