--- a/Project-00/TryApp-0/src/app/app.component.html
+++ b/Project-00/TryApp-0/src/app/app.component.html
@@ -55,9 +55,9 @@
             <span style="color: #fff; font-size: 16px;">Time</span>
           </button>
         </a>
+        <a href="http://15.229.117.8:8000/" target="_blank">Testar o servidor</a>
       </div>
 
-      
       
       
     </ion-menu>
