--- a/Project-00/TryApp-0/src/app/app.component.html
+++ b/Project-00/TryApp-0/src/app/app.component.html
@@ -7,9 +7,9 @@
           
           
           <ion-select aria-label="contas" placeholder="Mude de Herói" (ionChange)="TrocaConta($event)">
-            <ion-select-option value=0>Lucas</ion-select-option>
-            <ion-select-option value=1>Luan</ion-select-option>
-            <ion-select-option value=2>Arthur</ion-select-option>
+            <ion-select-option value=0>Cliente 1</ion-select-option>
+            <ion-select-option value=1>Cliente 2</ion-select-option>
+            <ion-select-option value=2>Cliente 3</ion-select-option>
             <ion-select-option value=3>Vinícius</ion-select-option>
           </ion-select>
           <button ion-button (click)="entrar()" style="width: 25%; border-radius: 5px;">Entrar</button>
@@ -17,8 +17,8 @@
         <!-- debug {{ nome }} -->
         <br>
        <div style="text-align: center;">
-              <a href="https://justa.com.vc" class="logo-link" >
-                <img src="https://justa.com.vc/wp-content/themes/justa/img/svg/logo-v2.svg" alt="Logo da Justa" role="img" width="130" height="41">
+              <a href="https://www.instagram.com/data_builders/" class="logo-link" >
+                <img src="https://i.ibb.co/x6JsmtY/image-removebg-preview.png" alt="Logo Databuilders" role="img" width="130" height="41">
               </a>
             </div>
             
@@ -42,11 +42,11 @@
         </ion-list>
         <!-- fim do conteudo-->
        
-        
+        <a href="http://15.229.117.8:8000/" target="_blank">Testar o servidor</a>
       </ion-content>
    
       <div style="background-color: #73849a; display: flex; justify-content: center; align-items: center; margin-bottom: auto; padding-bottom: 16px;">
-        <a href="https://github.com/GalaticosUPE" target="_blank">
+        <a href="https://www.instagram.com/data_builders/" target="_blank">
           <button type="button" class="btn btn-primary btn-icon" style="border-radius: 8px; border: none; margin-right: 16px;">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16" style="margin-right: 8px;">
